--- a/Case Study 2.Rmd
+++ b/Case Study 2.Rmd
@@ -1,14 +1,33 @@
-# Load necessary libraries
+---
+title: "Case Study 2"
+author: "Christian"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+## Preparing the Environment and Loading the Data
+
+This is loading the necessary libraries like readr, dplyr, tidyr, ggplot2, caret, e1071, and class. 
+
+```{r}
+# Load libraries
 library(rmarkdown)
 library(readr)
 library(dplyr)
 library(tidyr)
+library(caret)
+library(e1071)
+library(class)
 
-# Load the data
+
+# Load data
 data <- read.csv(choose.files())
 
 
-# Convert Attrition and other categorical variables to factors
+# Convert categorical variables to factors
 data$Attrition <- factor(data$Attrition, levels = c("No", "Yes"), labels = c(0, 1))
 data$BusinessTravel <- factor(data$BusinessTravel)
 data$Department <- factor(data$Department)
@@ -25,6 +44,13 @@ data_numeric <- data %>%
 
 # Remove constant variables
 data_numeric <- data_numeric %>% select_if(~sd(.) != 0)
+```
+
+# # Exploratory Data Analysis
+
+To begin, we started by analyzing the correlation between all variables. This produced a correlation matrix used to reference different variables in the selection process. 
+
+```{r}
 
 # Perform correlation analysis
 correlation <- cor(data_numeric, use = "complete.obs")
@@ -34,8 +60,11 @@ sorted_correlation <- sort(correlation['Attrition',], decreasing = TRUE)
 
 # Display the top factors (excluding Attrition itself)
 sorted_correlation[sorted_correlation != 1][1:3]
+```
 
+We next plotted different graphs in order to understand how the variables related to each other. 
 
+```{r}
 
 ggplot(data, aes(x = JobRole, fill = Attrition)) +
   geom_bar(position = "dodge") +
@@ -53,11 +82,85 @@ ggplot(data, aes(x = MaritalStatus, fill = Attrition)) +
   labs(title = "Marital Status vs Attrition", x = "Marital Status", y = "Count") +
   theme_minimal()
 
+# Visualizing correlations
+correlation_plot <- cor(data %>% select_if(is.numeric))
+ggplot(data = as.data.frame(correlation_plot), aes(x = Var1, y = Var2, fill = value)) +
+  geom_tile()
+
+# Identifying top factors for attrition
+attrition_factors <- data %>% 
+  group_by(attrition) %>% 
+  summarise_all(funs(mean(., na.rm = TRUE)))
+#Analyzing the distribution of attrition across different departments
+ggplot(data, aes(x = Department, fill = Attrition)) +
+  geom_bar(position = "fill") +
+  labs(title = "Attrition Distribution Across Departments", x = "Department", y = "Proportion")
+
+
+# Exploring the relationship between job satisfaction and attrition
+ggplot(data, aes(x = JobSatisfaction, fill = Attrition)) +
+  geom_bar(position = "fill") +
+  labs(title = "Job Satisfaction vs Attrition", x = "Job Satisfaction Level", y = "Proportion")
+
+# Relationship between total working years and attrition
+ggplot(data, aes(x = TotalWorkingYears, y = after_stat(count), fill = Attrition)) +
+  geom_histogram(binwidth = 1, position = "dodge") +
+  labs(title = "Total Working Years vs Attrition", x = "Total Working Years", y = "Count")
+
+# Plotting histogram of a variable (example: Age)
+ggplot(data, aes(x = Age)) + geom_histogram(bins = 30) + theme_minimal()
+
+# Exploring relationship between two variables (example: Age and Attrition)
+ggplot(data, aes(x = Age, fill = Attrition)) + geom_histogram(bins = 30) + theme_minimal()
+
+# Analyzing the distribution of attrition across different departments
+ggplot(data, aes(x = Department, fill = Attrition)) +
+  geom_bar(position = "fill") +
+  labs(title = "Attrition Distribution Across Departments", x = "Department", y = "Proportion")
+
+# Exploring the relationship between job satisfaction and attrition
+ggplot(data, aes(x = JobSatisfaction, fill = Attrition)) +
+  geom_bar(position = "fill") +
+  labs(title = "Job Satisfaction vs Attrition", x = "Job Satisfaction Level", y = "Proportion")
+
+# Relationship between total working years and attrition
+ggplot(data, aes(x = TotalWorkingYears, y = after_stat(count), fill = Attrition)) +
+  geom_histogram(binwidth = 1, position = "dodge") +
+  labs(title = "Total Working Years vs Attrition", x = "Total Working Years", y = "Count")
+
+# Analyzing job role specific trends in job satisfaction
+ggplot(data, aes(x = JobRole, y = JobSatisfaction)) +
+  geom_boxplot() +
+  labs(title = "Job Satisfaction Across Different Job Roles", x = "Job Role", y = "Job Satisfaction Level") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+# Job role specific attrition trends
+ggplot(data, aes(x = JobRole, fill = Attrition)) +
+  geom_bar(position = "fill") +
+  labs(title = "Attrition Rates Across Different Job Roles", x = "Job Role", y = "Proportion") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+# Age distribution with respect to attrition
+ggplot(data, aes(x = Age, fill = Attrition)) +
+  geom_histogram(binwidth = 1, position = "dodge") +
+  labs(title = "Age Distribution vs Attrition", x = "Age", y = "Count")
+
+# Exploring the impact of marital status on attrition
+ggplot(data, aes(x = MaritalStatus, fill = Attrition)) +
+  geom_bar(position = "fill") +
+  labs(title = "Marital Status vs Attrition", x = "Marital Status", y = "Proportion")
+
+```
+
+Parts of the above EDA were generated by AI and were useful in coming up with creative graphs.
+
+# # Analysis of Important Variables
+
+Given the most highly correlated variables, we decided to proceed with a model that includes them in order to test it's accuracy. 
+
+```{r}
 
 data$Attrition
-# Load necessary libraries
-library(readr)
-library(dplyr)
 
 # Load the data
 data <- read.csv(choose.files())
@@ -93,8 +196,14 @@ unique(data$Attrition)
 #overtime_attrition
 #marital_status_attrition
 
-## Load the data
+```
 
+This did not yield a reliable or accurate model, so we began to search elsewhere for better variables. 
+
+
+# # T-tests and Variables 
+
+```{r}
 
 # Load the data
 data <- read.csv(choose.files())
@@ -139,16 +248,12 @@ t_test_results <- t_test_results[order(t_test_results$p_value),]
 # Display the results
 print(t_test_results)
 
+```
+
+Given these results, we began to proceed with the new model. 
 
 
-
-# Load necessary libraries
-library(readr)
-library(dplyr)
-library(caret)
-library(e1071)
-library(class)
-
+```{r}
 # Load the data
 train_data <- read.csv(choose.files())
 test_data <- read.csv(choose.files())
@@ -189,17 +294,13 @@ data$IncomeGroupCode <- as.numeric(data$IncomeGroup)
 # Display the first few rows of the dataset to verify
 head(data)
 
-
-
-
-
-
 train_data <- train_data %>%
   select(Attrition, MonthlyIncome, JobLevel, TotalWorkingYears) %>%
   mutate(MonthlyIncome = factor(MonthlyIncome),
          Attrition = factor(Attrition, levels = c("No", "Yes")))
 
 
+#Previous test with correlation-determined variables
 #test_data <- test_data %>%
 #  select(OverTime, JobRole, MaritalStatus) %>%
 #  mutate(OverTime = factor(OverTime))
@@ -208,18 +309,11 @@ test_data <- test_data %>%
   select(MonthlyIncome, JobLevel, TotalWorkingYears) %>%
   mutate(MonthlyIncome = factor(MonthlyIncome))
 
-
-
 # Splitting the training data
 set.seed(123)  # for reproducibility
 training_indices <- createDataPartition(train_data$Attrition, p = 0.8, list = FALSE)
 training_set <- train_data[training_indices, ]
 validation_set <- train_data[-training_indices, ]
-
-
-
-
-
 
 # Trying different values of k
 k_values <- c(3, 5, 7, 9)
@@ -236,15 +330,6 @@ for (k in k_values) {
 
 # Find the best k value
 best_k <- k_values[which.max(sensitivities + specificities)]
-
-
-
-
-
-
-
-
-
 
 # Training KNN model
 knn_model <- knn3(Attrition ~ ., data = training_set, k = 15)
@@ -295,19 +380,21 @@ test_predictions <- predict(knn_model, test_data)
 # Output predictions
 test_predictions
 
-
 data$OverTime
-
 
 # Assuming 'data' is your dataframe
 data$OverTime <- as.factor(data$OverTime)  # Convert to factor if it's not
 data$JobRole <- as.factor(data$JobRole)  # Convert to factor if it's not
 data$MaritalStatus <- as.factor(data$MaritalStatus)  # Convert to factor if it's not
 
-
-
 # Building the model
 model <- lm(MonthlyIncome ~ OverTime + JobRole + MaritalStatus, data = data)
 
 # Summary of the model to see coefficients and statistics
 summary(model)
+
+```
+# # Conclusion
+
+Given the results of the t-test determined variables, the results were still disappointing. With hours of work put into researching models, and each of these models being no-good, there were no leads towards a better method, the deadline came and went without a good solution. This is not how I wanted this project to come out, nor how I imagined it would come out. This took hours upon hours, and even one all-nighter attempting to find a better way, but in the end, I was unable to do so. 
+
